@@ -18,6 +18,7 @@
            depend="yes"
            debug="false"
            source="1.4"
+           target="1.4"
            optimize="yes"
     >
     </javac>
