@@ -1,0 +1,4 @@
+b4 - @test is: @('a', 'b', 'c', 'd')
+Found element 'c' at 2
+A treeset: [a, a1, b, b1, c, c1, d, e, f]
+A sortedmap: {a=apple, b=bannana, c=cod, z=zebra}
